# coding-agent

./: .gitignore  LICENSE  README.md  call_function.py  files_info.py  main.py  pyproject.toml  schemas.py
backend/: call_function.py  main.py  pyproject.toml
backend/agent/tools/: files_info.py  read_file.py  run_file.py
backend/app/: agent_orchestrator.py  config.py  database.py  main.py  models.py  schemas.py
backend/app/agent/: call_function.py
backend/app/agent/tools/: copy_file.py  delete_path.py  read_file.py
backend/app/routers/: session.py
client/: call_function.py  pyproject.toml  start-mcp.sh
client/mcp_coding_agent/: agent_orchestrator.py
client/mcp_coding_agent/tools/: files_info.py  write_file.py
client/quirk/: agent_orchestrator.py  cli.py  config.py  mcp_server.py
client/quirk/tools/: delete_path.py  run_file.py
tenet/: agent_orchestrator.py  cli.py  client.py  config.py  main.py  models.py  tui.py
tenet/core/: agent_orchestrator.py  memory.py  session_logger.py
tenet/llm/: client.py
tenet/prompts/: TENET.md
tenet/tools/: context_ops.py  executor.py  file_ops.py  shell.py  shell_ops.py  tool_schema.py
tenet/ui/: cli.py  display.py
tools/: copy_file.py  files_info.py  read_file.py  write_file.py
