[project]
name = "tenet"
version = "0.1.0"
description = "Terminal based coding agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=2.33.0",
    "prompt-toolkit>=3.0.52",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "rich>=15.0.0",
]
[project.scripts]
tenet = "tenet.main:main"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"