[project]
name = "coding-agent-backend"
version = "0.1.0"
description = "FastAPI backend for Quirk"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.120.4",
    "uvicorn>=0.30.6",
    "sqlalchemy>=2.0.44",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.1.1",
    "pydantic>=2.12.3",
    "httpx>=0.28.1",
    "tenacity>=9.1.2",
    "google-genai>=1.46.0",
    "psycopg>=3.2.12",
    "pydantic-settings==2.11.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
