[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
requires-python = ">=3.12"
name = "quirk"
version = "0.1.0"
description = "MCP-enabled Coding Agent CLI"
dependencies = [
    "uvicorn[standard]==0.30.6",
    "httpx==0.28.1",
    "questionary==2.1.0",
    "google-generativeai==0.8.3",
    "python-dotenv==1.1.1",
    "mcp[cli]>=1.12.4",
    "google-genai>=1.46.0",
]

[project.scripts]
quirk = "quirk.cli:main"

[project.optional-dependencies]
dev = ["black", "ruff"]
