[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quirk"
version = "0.1.0"
requires-python = ">=3.12"
description = "AI Coding Agent"
authors = [{name = "Surya Vamsi", email = "suryavamsigara2@gmail.com"}]
dependencies = [
    "httpx==0.28.1",
    "questionary==2.1.0",
    "prompt_toolkit<=3.0.36",
    "python-dotenv==1.1.1",
    "mcp[cli]>=1.12.4",
]

[project.scripts]
quirk = "quirk.cli:main"

